Apply the sirix formatter to the branch's files
Spotless is ratcheted from origin/main, so spotlessCheck runs against
exactly the files this branch touches — and several of them carried
formatting the profile rewrites (Javadoc paragraph style, ternary and
argument wrapping, expanded initializer blocks). Purely mechanical:
`./gradlew :sirix-core:spotlessApply`, no semantic change; the fuzz,
detector and index-package tests were re-run on the formatted tree.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QTdJDbTunrqd3Fm14Qk7jx