@@ -33,12 +33,13 @@ import static org.junit.Assert.assertTrue;
 /**
  * CAS index construction over the default (HOT) index backend.
  *
- * <p>Covers both ways an index is populated, because they run through different machinery: an
- * index created <em>before</em> the data is inserted is filled entry-by-entry by the change
- * listener, while an index created <em>over an existing revision</em> is bulk-built from the
- * traversal. Both must produce the same postings, including for values that repeat across many
- * nodes — the shape the bulk-comparison corpus has, and the one that used to make index building
- * quadratic.</p>
+ * <p>
+ * Covers both ways an index is populated, because they run through different machinery: an index
+ * created <em>before</em> the data is inserted is filled entry-by-entry by the change listener,
+ * while an index created <em>over an existing revision</em> is bulk-built from the traversal. Both
+ * must produce the same postings, including for values that repeat across many nodes — the shape
+ * the bulk-comparison corpus has, and the one that used to make index building quadratic.
+ * </p>
  */
 public final class JsonCASIndexBuildTest {
 
@@ -61,7 +62,9 @@ public final class JsonCASIndexBuildTest {
     JsonTestHelper.deleteEverything();
   }
 
-  /** A document of {@link #RECORDS} objects whose {@code category} cycles over {@link #CATEGORIES}. */
+  /**
+   * A document of {@link #RECORDS} objects whose {@code category} cycles over {@link #CATEGORIES}.
+   */
   private static String duplicateHeavyDocument() {
     final StringBuilder json = new StringBuilder(RECORDS * 48);
     json.append('[');
@@ -69,7 +72,10 @@ public final class JsonCASIndexBuildTest {
       if (i > 0) {
         json.append(',');
       }
-      json.append("{\"id\":").append(i).append(",\"category\":\"").append(CATEGORIES[i % CATEGORIES.length])
+      json.append("{\"id\":")
+          .append(i)
+          .append(",\"category\":\"")
+          .append(CATEGORIES[i % CATEGORIES.length])
           .append("\"}");
     }
     return json.append(']').toString();
@@ -83,9 +89,9 @@ public final class JsonCASIndexBuildTest {
       final JsonNodeTrx trx, final IndexDef indexDef) {
     final Map<String, TreeSet<Long>> postings = new LinkedHashMap<>(CATEGORIES.length);
     for (final String category : CATEGORIES) {
-      final Iterator<NodeReferences> hits = indexController.openCASIndex(trx.getStorageEngineReader(), indexDef,
-          indexController.createCASFilter(Set.of(CATEGORY_PATH), new Str(category), SearchMode.EQUAL,
-              new JsonPCRCollector(trx)));
+      final Iterator<NodeReferences> hits =
+          indexController.openCASIndex(trx.getStorageEngineReader(), indexDef, indexController.createCASFilter(
+              Set.of(CATEGORY_PATH), new Str(category), SearchMode.EQUAL, new JsonPCRCollector(trx)));
       final TreeSet<Long> nodeKeys = new TreeSet<>();
       while (hits.hasNext()) {
         final LongIterator it = hits.next().getNodeKeys().getLongIterator();
@@ -99,20 +105,20 @@ public final class JsonCASIndexBuildTest {
   }
 
   private static IndexDef categoryIndexDef(final int id) {
-    return IndexDefs.createCASIdxDef(false, Type.STR,
-        Collections.singleton(parse(CATEGORY_PATH, PathParser.Type.JSON)), id, IndexDef.DbType.JSON);
+    return IndexDefs.createCASIdxDef(false, Type.STR, Collections.singleton(parse(CATEGORY_PATH, PathParser.Type.JSON)),
+        id, IndexDef.DbType.JSON);
   }
 
   private static void shred(final JsonNodeTrx trx, final String json) {
-    new JsonShredder.Builder(trx, JsonShredder.createStringReader(json), InsertPosition.AS_FIRST_CHILD)
-        .commitAfterwards().build().call();
+    new JsonShredder.Builder(trx, JsonShredder.createStringReader(json),
+        InsertPosition.AS_FIRST_CHILD).commitAfterwards().build().call();
   }
 
   /** Postings of an index created over an already-shredded revision (the bulk-built path). */
   private Map<String, TreeSet<Long>> buildOverExistingRevision(final Path databasePath) {
     final var database = JsonTestHelper.getDatabase(databasePath);
     try (final JsonResourceSession manager = database.beginResourceSession(JsonTestHelper.RESOURCE);
-         final JsonNodeTrx trx = manager.beginNodeTrx()) {
+        final JsonNodeTrx trx = manager.beginNodeTrx()) {
       shred(trx, duplicateHeavyDocument());
       final JsonIndexController indexController = manager.getWtxIndexController(trx.getRevisionNumber());
       indexController.createIndexes(Set.of(categoryIndexDef(0)), trx);
@@ -125,7 +131,7 @@ public final class JsonCASIndexBuildTest {
   private Map<String, TreeSet<Long>> buildWhileInserting(final Path databasePath) {
     final var database = JsonTestHelper.getDatabase(databasePath);
     try (final JsonResourceSession manager = database.beginResourceSession(JsonTestHelper.RESOURCE);
-         final JsonNodeTrx trx = manager.beginNodeTrx()) {
+        final JsonNodeTrx trx = manager.beginNodeTrx()) {
       final JsonIndexController indexController = manager.getWtxIndexController(trx.getRevisionNumber());
       indexController.createIndexes(Set.of(categoryIndexDef(0)), trx);
       shred(trx, duplicateHeavyDocument());
@@ -135,8 +141,7 @@ public final class JsonCASIndexBuildTest {
 
   @Test
   public void buildingOverAnExistingRevisionIndexesEveryOccurrenceOfARepeatedValue() {
-    final Map<String, TreeSet<Long>> postings =
-        buildOverExistingRevision(JsonTestHelper.PATHS.PATH1.getFile());
+    final Map<String, TreeSet<Long>> postings = buildOverExistingRevision(JsonTestHelper.PATHS.PATH1.getFile());
 
     long total = 0;
     for (final String category : CATEGORIES) {
@@ -149,16 +154,16 @@ public final class JsonCASIndexBuildTest {
 
   /**
    * Building over an existing revision must materialise the trie in one canonical pass. The
-   * incremental path it replaced reached the same result by inserting entry-by-entry and healing
-   * the malformed nodes its folds produced — thousands of {@code O(subtree)} rebuilds for a
-   * document this size, which is what made building an index over a large corpus impractical.
-   * Counting rebuilds rather than milliseconds keeps the guard deterministic.
+   * incremental path it replaced reached the same result by inserting entry-by-entry and healing the
+   * malformed nodes its folds produced — thousands of {@code O(subtree)} rebuilds for a document this
+   * size, which is what made building an index over a large corpus impractical. Counting rebuilds
+   * rather than milliseconds keeps the guard deterministic.
    */
   @Test
   public void buildingOverAnExistingRevisionRebuildsNoSubtree() {
     final var database = JsonTestHelper.getDatabase(JsonTestHelper.PATHS.PATH1.getFile());
     try (final JsonResourceSession manager = database.beginResourceSession(JsonTestHelper.RESOURCE);
-         final JsonNodeTrx trx = manager.beginNodeTrx()) {
+        final JsonNodeTrx trx = manager.beginNodeTrx()) {
       shred(trx, duplicateHeavyDocument());
       final JsonIndexController indexController = manager.getWtxIndexController(trx.getRevisionNumber());
 
@@ -184,8 +189,8 @@ public final class JsonCASIndexBuildTest {
 
     assertEquals("both builds must cover the same values", bulk.keySet(), incremental.keySet());
     for (final String category : CATEGORIES) {
-      assertEquals("postings for " + category + " must not depend on how the index was built",
-          bulk.get(category), incremental.get(category));
+      assertEquals("postings for " + category + " must not depend on how the index was built", bulk.get(category),
+          incremental.get(category));
     }
   }
 
@@ -193,9 +198,9 @@ public final class JsonCASIndexBuildTest {
    * Every index now starts life as a {@link io.sirix.index.hot.HOTBulkBuilder}-produced trie rather
    * than as the empty leaf the incremental path used to grow from, so the first update a resource
    * takes after a build lands on a shape the incremental machinery had never been fed. This walks
-   * that transition: bulk-build, commit, then insert and delete through the change listener —
-   * merging into a key the bulk build already wrote, adding a key it never saw, and removing nodes
-   * of both — and checks the postings still describe the document.
+   * that transition: bulk-build, commit, then insert and delete through the change listener — merging
+   * into a key the bulk build already wrote, adding a key it never saw, and removing nodes of both —
+   * and checks the postings still describe the document.
    */
   @Test
   public void incrementalInsertsAndDeletesAfterABulkBuild() {
@@ -208,7 +213,7 @@ public final class JsonCASIndexBuildTest {
     expected.put(freshCategory, 0);
 
     try (final JsonResourceSession manager = database.beginResourceSession(JsonTestHelper.RESOURCE);
-         final JsonNodeTrx trx = manager.beginNodeTrx()) {
+        final JsonNodeTrx trx = manager.beginNodeTrx()) {
       shred(trx, duplicateHeavyDocument());
       final JsonIndexController indexController = manager.getWtxIndexController(trx.getRevisionNumber());
       indexController.createIndexes(Set.of(categoryIndexDef(0)), trx);
@@ -221,16 +226,20 @@ public final class JsonCASIndexBuildTest {
       trx.moveToFirstChild();
       final long arrayNodeKey = trx.getNodeKey();
       for (int i = 0; i < inserts; i++) {
-        final String category = i % 2 == 0 ? CATEGORIES[0] : freshCategory;
+        final String category = i % 2 == 0
+            ? CATEGORIES[0]
+            : freshCategory;
         trx.moveTo(arrayNodeKey);
-        trx.insertSubtreeAsFirstChild(
-            JsonShredder.createStringReader("{\"category\":\"" + category + "\"}"), JsonNodeTrx.Commit.NO);
+        trx.insertSubtreeAsFirstChild(JsonShredder.createStringReader("{\"category\":\"" + category + "\"}"),
+            JsonNodeTrx.Commit.NO);
         expected.merge(category, 1, Integer::sum);
       }
 
       final int deletes = 6;
       for (int i = 0; i < deletes; i++) {
-        final String category = (inserts - 1 - i) % 2 == 0 ? CATEGORIES[0] : freshCategory;
+        final String category = (inserts - 1 - i) % 2 == 0
+            ? CATEGORIES[0]
+            : freshCategory;
         trx.moveTo(arrayNodeKey);
         trx.moveToFirstChild();
         trx.remove();
@@ -242,9 +251,9 @@ public final class JsonCASIndexBuildTest {
       long total = 0;
       for (final Map.Entry<String, Integer> entry : expected.entrySet()) {
         final TreeSet<Long> nodeKeys = new TreeSet<>();
-        final Iterator<NodeReferences> hits = indexController.openCASIndex(trx.getStorageEngineReader(), indexDef,
-            indexController.createCASFilter(Set.of(CATEGORY_PATH), new Str(entry.getKey()), SearchMode.EQUAL,
-                new JsonPCRCollector(trx)));
+        final Iterator<NodeReferences> hits =
+            indexController.openCASIndex(trx.getStorageEngineReader(), indexDef, indexController.createCASFilter(
+                Set.of(CATEGORY_PATH), new Str(entry.getKey()), SearchMode.EQUAL, new JsonPCRCollector(trx)));
         while (hits.hasNext()) {
           final LongIterator it = hits.next().getNodeKeys().getLongIterator();
           while (it.hasNext()) {
@@ -265,9 +274,9 @@ public final class JsonCASIndexBuildTest {
   /**
    * The loader keeps composite keys in fixed 1 MiB blocks, so sorting, grouping and the final key
    * copy all have to address across block boundaries. Long values reach that in a few thousand
-   * records: 10 header bytes + a 200-byte value + the 4-byte chunkIdx trailer is 214 bytes a key,
-   * so this build spans two blocks. Values are near {@code MAX_STRING_VALUE_BYTES} but under it,
-   * so nothing is truncated and every value stays distinguishable.
+   * records: 10 header bytes + a 200-byte value + the 4-byte chunkIdx trailer is 214 bytes a key, so
+   * this build spans two blocks. Values are near {@code MAX_STRING_VALUE_BYTES} but under it, so
+   * nothing is truncated and every value stays distinguishable.
    */
   @Test
   public void buildsAnIndexWhoseKeysSpanSeveralBlocks() {
@@ -288,7 +297,7 @@ public final class JsonCASIndexBuildTest {
 
     final var database = JsonTestHelper.getDatabase(JsonTestHelper.PATHS.PATH1.getFile());
     try (final JsonResourceSession manager = database.beginResourceSession(JsonTestHelper.RESOURCE);
-         final JsonNodeTrx trx = manager.beginNodeTrx()) {
+        final JsonNodeTrx trx = manager.beginNodeTrx()) {
       shred(trx, json.toString());
       final JsonIndexController indexController = manager.getWtxIndexController(trx.getRevisionNumber());
       indexController.createIndexes(Set.of(categoryIndexDef(0)), trx);
@@ -299,9 +308,9 @@ public final class JsonCASIndexBuildTest {
           count(indexController.openCASIndex(trx.getStorageEngineReader(), indexDef,
               indexController.createCASFilter(Set.of(), null, SearchMode.EQUAL, new JsonPCRCollector(trx)))));
 
-      final Iterator<NodeReferences> hits = indexController.openCASIndex(trx.getStorageEngineReader(), indexDef,
-          indexController.createCASFilter(Set.of(CATEGORY_PATH), new Str(probe), SearchMode.EQUAL,
-              new JsonPCRCollector(trx)));
+      final Iterator<NodeReferences> hits =
+          indexController.openCASIndex(trx.getStorageEngineReader(), indexDef, indexController.createCASFilter(
+              Set.of(CATEGORY_PATH), new Str(probe), SearchMode.EQUAL, new JsonPCRCollector(trx)));
       final TreeSet<Long> nodeKeys = new TreeSet<>();
       while (hits.hasNext()) {
         final LongIterator it = hits.next().getNodeKeys().getLongIterator();
@@ -320,29 +329,31 @@ public final class JsonCASIndexBuildTest {
     final var jsonPath = JSON.resolve("abc-location-stations.json");
     final var database = JsonTestHelper.getDatabase(JsonTestHelper.PATHS.PATH1.getFile());
     try (final JsonResourceSession manager = database.beginResourceSession(JsonTestHelper.RESOURCE);
-         final JsonNodeTrx trx = manager.beginNodeTrx()) {
-      new JsonShredder.Builder(trx, JsonShredder.createFileReader(jsonPath), InsertPosition.AS_FIRST_CHILD)
-          .commitAfterwards().build().call();
+        final JsonNodeTrx trx = manager.beginNodeTrx()) {
+      new JsonShredder.Builder(trx, JsonShredder.createFileReader(jsonPath),
+          InsertPosition.AS_FIRST_CHILD).commitAfterwards().build().call();
 
       final JsonIndexController indexController = manager.getWtxIndexController(trx.getRevisionNumber());
       final var typePath = parse("/features/[]/type", PathParser.Type.JSON);
       final var namePath = parse("/features/[]/properties/name", PathParser.Type.JSON);
-      indexController.createIndexes(Set.of(
-          IndexDefs.createCASIdxDef(false, Type.STR, Collections.singleton(typePath), 0, IndexDef.DbType.JSON),
-          IndexDefs.createCASIdxDef(false, Type.STR, Collections.singleton(namePath), 1, IndexDef.DbType.JSON)), trx);
+      indexController.createIndexes(
+          Set.of(IndexDefs.createCASIdxDef(false, Type.STR, Collections.singleton(typePath), 0, IndexDef.DbType.JSON),
+              IndexDefs.createCASIdxDef(false, Type.STR, Collections.singleton(namePath), 1, IndexDef.DbType.JSON)),
+          trx);
       trx.commit();
 
       // "Feature" is the value of every /features/[]/type — the single-value extreme.
       final var typeDef = indexController.getIndexes().getIndexDef(0, IndexType.CAS);
-      assertEquals(53, count(indexController.openCASIndex(trx.getStorageEngineReader(), typeDef,
-          indexController.createCASFilter(Set.of("/features/[]/type"), new Str("Feature"), SearchMode.EQUAL,
-              new JsonPCRCollector(trx)))));
+      assertEquals(53,
+          count(indexController.openCASIndex(trx.getStorageEngineReader(), typeDef, indexController.createCASFilter(
+              Set.of("/features/[]/type"), new Str("Feature"), SearchMode.EQUAL, new JsonPCRCollector(trx)))));
 
       // Names are distinct — the all-singleton extreme.
       final var nameDef = indexController.getIndexes().getIndexDef(1, IndexType.CAS);
-      assertEquals(1, count(indexController.openCASIndex(trx.getStorageEngineReader(), nameDef,
-          indexController.createCASFilter(Set.of("/features/[]/properties/name"), new Str("ABC Radio Adelaide"),
-              SearchMode.EQUAL, new JsonPCRCollector(trx)))));
+      assertEquals(1,
+          count(indexController.openCASIndex(trx.getStorageEngineReader(), nameDef,
+              indexController.createCASFilter(Set.of("/features/[]/properties/name"), new Str("ABC Radio Adelaide"),
+                  SearchMode.EQUAL, new JsonPCRCollector(trx)))));
       assertEquals(53, count(indexController.openCASIndex(trx.getStorageEngineReader(), nameDef,
           indexController.createCASFilter(Set.of(), null, SearchMode.EQUAL, new JsonPCRCollector(trx)))));
 
